PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.1.0alpha1

- Core:
  . Fixed inclusion order for phpize builds on Windows. (cmb)
  . Added missing hashtable insertion APIs for arr/obj/ref. (Sara)

- FTP:
  . Convert resource<ftp> to object \FTPConnection. (Sara)

- GD:
  . Convert resource<gd font> to object \GdFont. (Sara)

- hash:
  . Implemented FR #68109 (Add MurmurHash V3). (Anatol, Michael)

- MySQLi:
  . Fixed bug #70372 (Emulate mysqli_fetch_all() for libmysqlclient). (Nikita)

- OpenSSL:
  . Bump minimal OpenSSL version to 1.0.2. (Jakub Zelenka)

- PDO:
  . Fixed bug #40913 (PDO_MYSQL: PDO::PARAM_LOB does not bind to a stream for
    fetching a BLOB). (Nikita)

- PSpell:
  . Convert resource<pspell> to object \PSpell. (Sara)
  . Convert resource<pspell config> to object \PSPellConfig. (Sara)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>