@@ -32,9 +32,9 @@ object(PDOStatement)#%d (1) {
 string(23) "select 1 as queryString"
 array(2) {
   ["queryString"]=>
-  string(1) "1"
+  int(1)
   [0]=>
-  string(1) "1"
+  int(1)
 }
 NULL
 --------------------------------------------
@@ -45,6 +45,6 @@ object(PDOStatement)#%d (1) {
 string(23) "select 1 as queryString"
 object(PDORow)#%d (1) {
   ["queryString"]=>
-  string(1) "1"
+  int(1)
 }
-string(1) "1"
+int(1)
